[package]
name = "lisp-like-gum"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]

[dependencies]
nanomsg = "0.6"
num = "0.1"
docopt = "0.6"
lazy_static = "0.2"
log = "0.3"
rand = "0.3"
libc = "0.2"
serde = "0.8"
serde_macros = "0.8"
serde_cbor = "0.4"
mpi = { git = "https://github.com/bsteinb/rsmpi.git", rev = "master" }
